# survey_project_checker

./: CNAME  Cargo.toml  flake.nix  index.html  style.css
pkg/: README.md  package.json  survey_project_checker.d.ts  survey_project_checker.js  survey_project_checker_bg.wasm  survey_project_checker_bg.wasm.d.ts
scripts/: index.js
src/: error.rs  html.rs  lib.rs
