[package]
name = "wasm_template"
version = "0.1.0"
authors = ["Nicholas Comendant <nicholas.comendant@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
http = {path = "../rust_libs/http"}
js_wasm = {path = "../rust_libs/js_wasm"}
wasm_mutex = "0.1"
console_error_panic_hook = "0.1"
wasm-bindgen = {version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
    'HtmlElement',
]